[gd_scene load_steps=38 format=2]

[ext_resource path="res://images/bird-green/bird-green-fly6.png" type="Texture" id=1]
[ext_resource path="res://images/bird-green/bird-green-fly2.png" type="Texture" id=2]
[ext_resource path="res://images/bird-green/bird-green-fly7.png" type="Texture" id=3]
[ext_resource path="res://images/bird-green/bird-green-fly4.png" type="Texture" id=4]
[ext_resource path="res://images/bird-green/bird-green-fly5.png" type="Texture" id=5]
[ext_resource path="res://images/bird-green/bird-green-fly8.png" type="Texture" id=6]
[ext_resource path="res://images/bird-green/bird-green-fly1.png" type="Texture" id=7]
[ext_resource path="res://images/bird-green/bird-green-fly3.png" type="Texture" id=8]
[ext_resource path="res://sounds/flap.ogg" type="AudioStream" id=9]
[ext_resource path="res://objects/Bird.gd" type="Script" id=10]
[ext_resource path="res://sounds/hit.ogg" type="AudioStream" id=11]
[ext_resource path="res://images/bird-red/bird-red-fly1.png" type="Texture" id=12]
[ext_resource path="res://images/bird-red/bird-red-fly2.png" type="Texture" id=13]
[ext_resource path="res://images/bird-red/bird-red-fly5.png" type="Texture" id=14]
[ext_resource path="res://images/bird-red/bird-red-fly4.png" type="Texture" id=15]
[ext_resource path="res://images/bird-red/bird-red-fly6.png" type="Texture" id=16]
[ext_resource path="res://images/bird-red/bird-red-fly7.png" type="Texture" id=17]
[ext_resource path="res://images/bird-red/bird-red-fly3.png" type="Texture" id=18]
[ext_resource path="res://images/bird-red/bird-red-fly8.png" type="Texture" id=19]
[ext_resource path="res://images/bird-yellow/bird-yellow-fly3.png" type="Texture" id=20]
[ext_resource path="res://images/bird-yellow/bird-yellow-fly5.png" type="Texture" id=21]
[ext_resource path="res://images/bird-yellow/bird-yellow-fly7.png" type="Texture" id=22]
[ext_resource path="res://images/bird-yellow/bird-yellow-fly8.png" type="Texture" id=23]
[ext_resource path="res://images/bird-yellow/bird-yellow-fly1.png" type="Texture" id=24]
[ext_resource path="res://images/bird-yellow/bird-yellow-fly2.png" type="Texture" id=25]
[ext_resource path="res://images/bird-yellow/bird-yellow-fly4.png" type="Texture" id=26]
[ext_resource path="res://images/bird-yellow/bird-yellow-fly6.png" type="Texture" id=27]
[ext_resource path="res://images/bird-blue/bird-blue-fly6.png" type="Texture" id=28]
[ext_resource path="res://images/bird-blue/bird-blue-fly1.png" type="Texture" id=29]
[ext_resource path="res://images/bird-blue/bird-blue-fly2.png" type="Texture" id=30]
[ext_resource path="res://images/bird-blue/bird-blue-fly3.png" type="Texture" id=31]
[ext_resource path="res://images/bird-blue/bird-blue-fly4.png" type="Texture" id=32]
[ext_resource path="res://images/bird-blue/bird-blue-fly7.png" type="Texture" id=33]
[ext_resource path="res://images/bird-blue/bird-blue-fly8.png" type="Texture" id=34]
[ext_resource path="res://images/bird-blue/bird-blue-fly5.png" type="Texture" id=35]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 29 ), ExtResource( 30 ), ExtResource( 31 ), ExtResource( 32 ), ExtResource( 35 ), ExtResource( 28 ), ExtResource( 33 ), ExtResource( 34 ) ],
"loop": false,
"name": "flap_blue",
"speed": 24.0
}, {
"frames": [ ExtResource( 7 ), ExtResource( 2 ), ExtResource( 8 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 1 ), ExtResource( 3 ), ExtResource( 6 ) ],
"loop": false,
"name": "flap_green",
"speed": 24.0
}, {
"frames": [ ExtResource( 12 ), ExtResource( 13 ), ExtResource( 18 ), ExtResource( 15 ), ExtResource( 14 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 19 ) ],
"loop": false,
"name": "flap_red",
"speed": 24.0
}, {
"frames": [ ExtResource( 24 ), ExtResource( 25 ), ExtResource( 20 ), ExtResource( 26 ), ExtResource( 21 ), ExtResource( 27 ), ExtResource( 22 ), ExtResource( 23 ) ],
"loop": false,
"name": "flap_yellow",
"speed": 24.0
}, {
"frames": [ ExtResource( 29 ) ],
"loop": false,
"name": "fly_blue",
"speed": 5.0
}, {
"frames": [ ExtResource( 7 ) ],
"loop": false,
"name": "fly_green",
"speed": 5.0
}, {
"frames": [ ExtResource( 12 ) ],
"loop": false,
"name": "fly_red",
"speed": 5.0
}, {
"frames": [ ExtResource( 24 ) ],
"loop": false,
"name": "fly_yellow",
"speed": 5.0
}, {
"frames": [ ExtResource( 29 ), ExtResource( 30 ), ExtResource( 31 ), ExtResource( 32 ), ExtResource( 35 ), ExtResource( 28 ), ExtResource( 33 ), ExtResource( 34 ) ],
"loop": true,
"name": "idle_blue",
"speed": 12.0
}, {
"frames": [ ExtResource( 7 ), ExtResource( 2 ), ExtResource( 8 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 1 ), ExtResource( 3 ), ExtResource( 6 ) ],
"loop": true,
"name": "idle_green",
"speed": 12.0
}, {
"frames": [ ExtResource( 12 ), ExtResource( 13 ), ExtResource( 18 ), ExtResource( 15 ), ExtResource( 14 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 19 ) ],
"loop": true,
"name": "idle_red",
"speed": 12.0
}, {
"frames": [ ExtResource( 24 ), ExtResource( 25 ), ExtResource( 20 ), ExtResource( 26 ), ExtResource( 21 ), ExtResource( 27 ), ExtResource( 22 ), ExtResource( 23 ) ],
"loop": true,
"name": "idle_yellow",
"speed": 12.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 26.0
height = 18.0001

[node name="Bird" type="RigidBody2D" groups=["bird"]]
collision_mask = 2
mode = 2
gravity_scale = 21.0
contacts_reported = 1
contact_monitor = true
script = ExtResource( 10 )
flap_strength = 650.0
rotation_divisor = 40.0

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "idle_green"
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource( 2 )

[node name="FlapSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
pitch_scale = 1.2
bus = "Sound"

[node name="HitSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )
volume_db = -4.0
bus = "Sound"

[connection signal="body_entered" from="." to="." method="_on_Bird_body_entered"]
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
